[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "policypulse-ai"
version = "1.0.0"
description = "Social Stream Moderation Environment for OpenEnv"
readme = "README.md"
authors = [
    { name = "PolicyPulse AI Team" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-multipart",
    "jinja2",
    "openenv-core>=0.2.0"
]

[tool.setuptools]
packages = ["envs", "server"]

[project.scripts]
server = "server.app:main"
